# cobot_pump_ros

./: CMakeLists.txt  README.md  package.xml
include/: cobot_pump_node.h
include/cobot_pump_ros/: cobot_pump.h
launch/: example.launch
msg/: vacuum.msg
scripts/: basic_demo.py
src/: basic_demo.py  cobot_pump.cpp  cobot_pump_node.cpp
srv/: checkItemAttached.srv  dropItem.srv  startPump.srv  stopPump.srv
